# cg3d-maya

./: .gitignore  README.md  cg3d-maya.wpr  pyproject.toml  setup.py
cg3dmaya/: userSetup.py
cg3dmaya/cascadeur/: Cascadeur.ui  core.py  editor.py  export_example.qrigcasc
cg3dmaya/menu/: __init__.py
cg3dmaya/menu/cascadeur/: __init__.py  editor.py  export_scene.py
cg3dmaya/menu/cascadeur/export_to/: current_scene.py  new_scene.py
cg3dmaya/menu/cascadeur/send_to/: current_scene.py  new_scene.py
cg3dmaya/menu/cascadeur/update/: update_animations.py  update_models.py
cg3dmaya/menu/techart/: __init__.py  user_data_editor.py
cg3dmaya/tests/: trash.py
cg3dmaya/user_data/: classes.py
src/cg3dmaya/: __init__.py  convert_fbx_file.py  core.py  install_cg3d_maya.py  paths.py  userSetup.py
src/cg3dmaya/menu/: __init__.py  preferences.py
src/cg3dmaya/menu/gameexporter/: __init__.py  export_animations.py  export_model.py  export_time_editor.py
src/cg3dmaya/menu/techart/: Connect_wing.py  connectToWing.py  rig_shape_tool.py  user_data_editor.py
src/cg3dmaya/p4/: core.py
src/cg3dmaya/preferences/: core.py  editor.py  preferences.ui
src/cg3dmaya/scriptjobs/: core.py
src/cg3dmaya/tests/: trash.py
src/cg3dmaya/uis/: rig_shape_editor.py  rig_shapes.ui
