[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cg3d-maya"
version = "1.0.0"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]
description = "The best of my personal maya scripts for public consumption in an easy to use module"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pymel>=1.5",
    "cg3d-maya-core==0.7.0",
    "wing-carrier==1.1.1",
]


[project.urls]
"Homepage" = "https://github.com/Nathanieljla/cg3d-maya"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui"]

